[package]
name = "twitch_live_hour_battle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
chrono-tz = "0.8.1"
dirs = "4.0.0"
parse_duration = "2.1.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
